# Pyroxene_Lang

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debug  Doxyfile  LICENSE.md  LICENSE_8md.html  README.md  annotated.html  ast_8cpp.html  ast_8h.html  ast_8h_source.html  classast_1_1binary__expr-members.html  classast_1_1binary__expr.html  classast_1_1bool__expression-members.html  classast_1_1bool__expression.html  classast_1_1char__expression-members.html  classast_1_1char__expression.html  classast_1_1dot__call__var-members.html  classast_1_1else__expr-members.html  classast_1_1else__expr.html  classast_1_1float__expression-members.html  classast_1_1float__expression.html  classast_1_1for__expr-members.html  classast_1_1for__expr.html  classast_1_1func__call__expr-members.html  classast_1_1func__call__expr.html  classast_1_1func__defn-members.html  classast_1_1func__defn.html  classast_1_1graph__decl__expr-members.html  classast_1_1identifier__expr-members.html  classast_1_1identifier__expr.html  classast_1_1if__expr-members.html  classast_1_1if__expr.html  classast_1_1integer__expression-members.html  classast_1_1integer__expression.html  classast_1_1list__decl.html  classast_1_1method__dot__call-members.html  (+89 more)
.github/workflows/: pages.yml  static.yml
VS_Code_Ext/: pyroxene-language-support-0.0.1.vsix
debug_test_suite/: unit_test_driver.cpp
debug_test_suite/lexer_tests/: lexer_tests.cpp
debug_test_suite/parser_tests/: parser_tests.cpp
docs/: license.txt  start.txt  syntax.txt
docs/html/: annotated.html  ast_8h_source.html  classast_1_1func__defn.html  classast_1_1top__level__expr.html  files.html  (+9 more)
html/: _l_i_c_e_n_s_e_8md.html  annotated.html  ast_8cpp.html  ast_8h.html  ast_8h_source.html  cfg_8md.html  classast_1_1binary__expr-members.html  classast_1_1binary__expr.html  classast_1_1bool__expression-members.html  classast_1_1bool__expression.html  classast_1_1char__expression-members.html  classast_1_1char__expression.html  classast_1_1dot__call__var-members.html  classast_1_1dot__call__var.html  classast_1_1else__expr-members.html  classast_1_1else__expr.html  classast_1_1float__expression-members.html  classast_1_1float__expression.html  classast_1_1func__call__expr-members.html  classast_1_1func__call__expr.html  classast_1_1func__defn-members.html  classast_1_1func__defn.html  classast_1_1graph__decl__expr-members.html  classast_1_1graph__decl__expr.html  classast_1_1identifier__expr-members.html  classast_1_1identifier__expr.html  classast_1_1if__expr-members.html  classast_1_1if__expr.html  classast_1_1integer__expression-members.html  classast_1_1integer__expression.html  classast_1_1list__decl-members.html  classast_1_1list__decl.html  classast_1_1method__dot__call-members.html  classast_1_1method__dot__call.html  classast_1_1print__expr-members.html  classast_1_1print__expr.html  classast_1_1return__expr-members.html  classast_1_1return__expr.html  classast_1_1string__expression-members.html  classast_1_1string__expression.html  (+71 more)
include/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+49 more)
src/: CMakeLists.txt  ast.cpp  codegen.cpp  driver.cpp  lexer.cpp  parser.cpp  scoping.cpp  type_checker.cpp  types.cpp  utility.cpp
test_files/: example_midterm.pyrx  graph_testing.pyrx  test_1.pyrx  test_1.txt  test_10.pyrx  test_11.pyrx  test_2.pyrx  test_2.txt  test_3.pyrx  test_4.pyrx  test_5.pyrx  test_6.pyrx  test_7.pyrx  test_8.pyrx  test_9.pyrx
unit_tests/: unit_test_driver.cpp
(+115 files in other folders)
